@@ -16,6 +16,8 @@ documents those changes that are of interest to users and admins.
     blocks.
  -- Add sinfo format and sort option "%n" for NodeHostName and "%o" for
     NodeAddr.
+ -- If a job is deferred due to partition limits, then re-test those limits
+    after a partition is modified. Patch from Don Lipari.
 
 * Changes in SLURM 2.3.0.rc2
 ============================
